# fastapi-Shop

./: .gitignore  deploy.sh  docker-compose.yaml  pyproject.toml
backend/: Dockerfile  requirements.txt  run.py  seed_data.py
backend/app/: config.py  database.py  main.py
backend/app/models/: __init__.py  category.py  products.py
backend/app/repositories/: category_repository.py  product_repository.py
backend/app/routes/: __init__.py  cart.py  categories.py  products.py
backend/app/schemas/: cart.py  category.py  products.py
backend/app/services/: cart_service.py  category_service.py  product_service.py
frontend/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue
frontend/src/assets/: main.css
frontend/src/components/: CartItem.vue  CategoryFilter.vue  Header.vue  ProductCard.vue
frontend/src/router/: index.js
frontend/src/services/: api.js
frontend/src/stores/: cart.js  products.js
frontend/src/views/: CartPage.vue  HomePage.vue  ProductDetailPage.vue
nginx/: nginx.conf
